Web Inspector: Add icon for collapsed blackboxed section https://bugs.webkit.org/show_bug.cgi?id=219806 <rdar://problem/72240360>
Reviewed by Patrick Angle.

* UserInterface/Views/BlackboxedGroupTreeElement.css:
(.tree-outline .item.blackboxed-group .icon):
(@media (prefers-color-scheme: dark) .tree-outline .item.blackboxed-group .icon):
Use `Hide.svg#black` and `Hide.svg#white`.

* UserInterface/Images/TypeIcons.svg:
Remove `#Blackboxed-dark` and `#Blackboxed-light`.



Canonical link: https://commits.webkit.org/245715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287586 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/BlackboxedGroupTreeElement.css
+++ b/Source/WebInspectorUI/UserInterface/Views/BlackboxedGroupTreeElement.css
@@ -29,11 +29,11 @@
 }
 
 .tree-outline .item.blackboxed-group .icon {
-    content: url(../Images/TypeIcons.svg#Blackboxed-light);
+    content: url(../Images/Hide.svg#black);
 }
 
 @media (prefers-color-scheme: dark) {
     .tree-outline .item.blackboxed-group .icon {
-        content: url(../Images/TypeIcons.svg#Blackboxed-dark);
+        content: url(../Images/Hide.svg#white);
     }
 }
